--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "amazon-mws",
-  "version": "0.0.23",
+  "name": "@dropbug/amazon-mws",
+  "version": "0.0.2",
   "description": "Amazon MWS API wrapper",
   "keywords": [
     "Amazon MWS",
@@ -39,7 +39,7 @@
   ],
   "repository": {
     "type": "git",
-    "url": "git://github.com/bhushankumarl/amazon-mws.git"
+    "url": "git://github.com/dropbug/amazon-mws.git"
   },
   "bugs:": "https://github.com/bhushankumarl/amazon-mws/issues",
   "engines": {
